--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,17 @@
  }
 
 .opciones{
-    width: 12px;
-    height: 500px;
+    margin-bottom: 30px 80px;
+    width: 60px;
+    height: 450px;
+    background-color:rgb(2, 88, 88);
+    display: inline-block;
+}
+
+.contenido{
+    margin-top: 30px -0px;
+    width: 800px;
+    height: 450px;
+    background-color: whitesmoke;
+    display: inline-block;
 }
