--- a/guia/estyles.css
+++ b/guia/estyles.css
@@ -13,8 +13,8 @@ body {
   background-color: var(--color);
 }
 
-.padre{
-    margin-left: 18%;
+.padre {
+  margin-left: 18%;
 }
 
 h2 {
@@ -30,19 +30,19 @@ h2 {
   width: 5%;
   height: 507px;
   z-index: 1;
-  margin-left: -10px ;
+  margin-left: -10px;
   background-color: rgb(2, 88, 88);
   display: inline-block;
 }
 
-.opciones img{
-    width: 50%;
-    margin-left: 10px;
+.opciones img {
+  width: 50%;
+  margin-left: 10px;
 }
 
-.opciones .primera{
-    margin-top: 10%;
-    margin-bottom: 600%;
+.opciones .primera {
+  margin-top: 10%;
+  margin-bottom: 600%;
 }
 
 .contenido {
@@ -54,12 +54,13 @@ h2 {
   position: absolute;
 }
 
-.barra{
-    margin-top: 20px;
-    margin-left: 20px;
-    display: flex;
+.barra {
+  margin-top: 20px;
+  margin-left: 20px;
+  display: flex;
 }
-.barra>p{
+
+.barra > p {
   padding: 0px 25px;
   font-family: var(--fuente);
   margin-top: 20px;
@@ -67,10 +68,10 @@ h2 {
   color: rgb(2, 88, 88);
 }
 
-.barra img{
-    width: 20%;
-    margin-top: 20px;
-    margin-left: 75px;
+.barra img {
+  width: 20%;
+  margin-top: 20px;
+  margin-left: 75px;
 }
 
 .barra .verde {
@@ -80,63 +81,61 @@ h2 {
   margin-top: 20px;
 }
 
-.box{
-    width: 50%;
-    height: 80%;
-    margin-left: 60px;
-    margin-top: 20px;
-    float: left;
-    background-position: center;
+.box {
+  width: 50%;
+  height: 80%;
+  margin-left: 60px;
+  margin-top: 20px;
+  float: left;
+  margin-bottom: 350px;
+  background-position: center;
 }
 
-.fondo{
-     width: 100%;
-     height: 95%;
+.fondo {
+  width: 100%;
+  height: 95%;
 }
 
-.conten{
-    position: absolute;
-    color:white;
-    margin-top: 100px;
-    width: 40%;
-    height: 50%;
-    margin-left: 30PX;
-    transform: translate(6%, -130%);
+.conten {
+  position: absolute;
+  color: white;
+  margin-top: 100px;
+  width: 40%;
+  height: 50%;
+  margin-left: 30px;
+  transform: translate(6%, -130%);
 }
 
-.boton1{
-  margin-top: 2px;
-  background-color: var(--color);
+.boton1,
+.boton2 {
   width: 40%;
   height: 12%;
   border-radius: 30px;
   border: none;
-}
-
-.boton1 img{
-  width: 10%;
-}
-
-.boton2{
   margin-top: 2px;
+}
+
+.boton1 {
   background-color: var(--color);
-  width: 40%;
-  height: 12%;
+}
+
+.boton2 {
   background-color: rgba(2, 88, 88, 0);
-  border-radius: 30px;
   border: solid var(--color);
   color: var(--color);
 }
 
-.boton2 img{
+.boton1 img,
+.boton2 img {
   width: 10%;
 }
 
-.formulario>{
+.formulario {
   background-color: white;
-  width: 30%;
+  width: 90%;
   margin: 30px auto;
   padding: 30px;
+  border-radius: 20px;
   font-family: var(--fuente);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -210,6 +209,12 @@ h2 {
 }
 
 .boton-container img {
-  width: 6px;
+  width: 16px;
+  vertical-align: middle;
   margin-left: 10px;
 }
+
+.clear {
+  clear: both;
+}
+
