--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body {
 
 .padre{
     margin-left: 18%;
+    box-shadow: -9.7vh 10vh 3vh -8.3vh  rgba(14, 65, 52, 0.479);
 }
 
 h2 {
@@ -28,11 +29,11 @@ h2 {
 
 .opciones {
   width: 5%;
-  height: 507px;
   z-index: 1;
   margin-left: -10px ;
   background-color: rgb(2, 88, 88);
   display: inline-block;
+  position: relative;
 }
 
 .opciones img{
@@ -48,7 +49,7 @@ h2 {
 .contenido {
   margin-left: -3px;
   width: 70%;
-  height: 80%;
+  height: 77.6%;
   background-color: gainsboro;
   display: inline-block;
   position: absolute;
@@ -60,11 +61,12 @@ h2 {
     display: flex;
 }
 .barra>p{
-  padding: 0px 25px;
+  padding: 0px 37px;
   font-family: var(--fuente);
   margin-top: 20px;
   font-weight: bold;
   color: rgb(2, 88, 88);
+  font-size: 20px;
 }
 
 .barra img{
@@ -75,7 +77,7 @@ h2 {
 
 .barra .verde {
   color: var(--color);
-  font-size: 15px;
+  font-size: 20px;
   margin-left: -20px;
   margin-top: 20px;
 }
@@ -91,7 +93,7 @@ h2 {
 
 .fondo{
      width: 100%;
-     height: 95%;
+     height: 98%;
 }
 
 .conten{
@@ -101,7 +103,22 @@ h2 {
     width: 40%;
     height: 50%;
     margin-left: 30PX;
-    transform: translate(6%, -130%);
+    font-family: var(--fuente);
+    transform: translate(6%, -100%);
+}
+
+.conten .unico{
+  color: var(--color);
+}
+
+.opacidad{
+     width: 50%;
+     height: 79%;
+     margin-top: 100px;
+     background-color: rgba(2, 88, 88, 0.534);
+     position: absolute;
+     transform: translate(0%, -118%);
+
 }
 
 .boton1{
@@ -110,6 +127,7 @@ h2 {
   width: 40%;
   height: 12%;
   border-radius: 30px;
+  color: white;
   border: none;
 }
 
@@ -132,84 +150,86 @@ h2 {
   width: 10%;
 }
 
-.formulario>{
-  background-color: white;
-  width: 30%;
-  margin: 30px auto;
-  padding: 30px;
+
+.formulario{
+    width: 40%;
+    height: 78.6%;
+    margin-top: 20px;
+    float: left;
+    background-color: white;
+    background-position: center;
+    box-shadow: -0.2vh 0.8vh 1vh 2vh rgba(18, 19, 19, 0.062);;
+}
+
+.formulario h1{
+  text-align: center;
+  color: var(--color);
   font-family: var(--fuente);
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top:20px;
+  margin-bottom: 10px;
 }
 
-.formulario h1 {
-  text-align: center;
-  color: mediumseagreen;
-  margin-bottom: 30px;
-}
-
-.campo-container {
-  margin-bottom: 20px;
-}
-
-.campo {
+.row .col{
+  padding: 4px 30px;
   display: inline-block;
-  width: 47%;
-  margin-right: 3%;
-  vertical-align: top;
 }
 
-.campo.largo {
-  width: 100%;
-}
-
-.label {
-  font-size: 14px;
-  color: gray;
+.titulo {
+  font-family: var(--fuente);
   margin-bottom: 5px;
+  color: gray;
 }
 
-.entrada {
-  background-color: rgb(233, 229, 229);
-  color: rgba(128, 128, 128, 0.7);
-  border-radius: 30px;
-  padding: 12px 20px;
-  font-size: 16px;
+.entrada{
+  width: 200px;
+  height: 40px;
+  line-height: 40px;
+  font-family: var(--fuente);
+  color: grey;
+  background-color: rgba(202, 202, 202, 0.541);
+  border-radius: 20px;
+  margin-bottom: 15px;
+
 }
 
-.entrada-icono {
-  background-color: rgb(233, 229, 229);
-  border-radius: 30px;
-  padding: 10px 15px;
+.entrada_icono{
+  width: 200px;
+  height: 40px;
+  font-family: var(--fuente);
+  color: grey;
+  background-color: rgba(202, 202, 202, 0.541);
+  border-radius: 20px;
+  
 }
 
-.entrada-icono img {
-  width: 18px;
-  vertical-align: middle;
-  margin-right: 10px;
+.entrada_icono img{
+  width: 12%;
+  line-height: center;
 }
 
-.entrada-icono span {
-  vertical-align: middle;
-  color: rgba(128, 128, 128, 0.7);
-  font-size: 16px;
+.collargo .entrada{
+  padding: 4px 30px;
+  width: 460px;
+  margin-left: 30px;
+  margin-bottom: 15px;
 }
 
-.boton-container {
-  text-align: center;
+.collargo .titulo{
+    margin-left: 30px;
+}
+
+.boton3{
   margin-top: 30px;
-}
-
-.boton-container button {
-  background-color: mediumseagreen;
-  border: none;
+  background-color: var(--color);
+  width: 40%;
+  height: 12%;
   color: white;
-  font-size: 16px;
-  padding: 12px 24px;
   border-radius: 30px;
-  cursor: pointer;
+  border: none;
+  margin-left: 30%;
 }
 
-.boton-container img {
-  width: 6px;
-  margin-left: 10px;
+.boton3 img{
+  width: 10%;
+
 }
